fix: The z-index of modal to ensure it appears on the top layer.

--- a/src/components/common/QuestionnaireLabel/ExpandedModal/NetPromoter.module.css
+++ b/src/components/common/QuestionnaireLabel/ExpandedModal/NetPromoter.module.css
@@ -27,6 +27,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 9;
   }
 
   .container {
